@@ -7,7 +7,7 @@
   <artifactId>arq</artifactId>
   <packaging>jar</packaging>
   <name>ARQ</name>
-  <version>2.8.2-SNAPSHOT</version>
+  <version>2.8.2-RC-1</version>
 
   <description>ARQ is a SPARQL query engine for Jena</description>
   <url>http://openjena.org/ARQ</url>
