@@ -8,6 +8,7 @@ ChangeLog for ARQ
 + Optimization of disjunction FILTERs 
     with care to get same effects if value-based
     URIs are always safe to optimize. 
++ Bug fix in filter placement (in code used by TDB only) 
 
 ==== ARQ 2.8.1
 
